Rename Rectangular Detector to Flat Detector

--- a/Doc/UserManual/BasicRef.tex
+++ b/Doc/UserManual/BasicRef.tex
@@ -91,7 +91,7 @@ and  \texttt{n\_alpha} equidistant polar ($xz$, vertical, specular) bins (\cref{
 The alternate function~\clFct{GISAS\-Simulation}{setDetector}
 allows to supply any detector that realizes the interface \ttIdx{IDetector2D}.
 Besides \texttt{SphericalDetector}, this can be a \ttIdx{Rectangular\-Detector}.
-For details, see the \tuto{141}{rectangular detector tutorial}.
+For details, see the \tuto{141}{flat detector tutorial}.
 
 \subsubsection{Beam setup}\label{SRefBeam}
 \begin{lstlisting}
