--- a/Doc/UserManual/Instrument.tex
+++ b/Doc/UserManual/Instrument.tex
@@ -69,7 +69,7 @@ BornAgain requires a full parametrization of the detector geometry
 \index{Detector!calibration}%
 to correctly perform the affine-linear mapping from pixel indices $i,j$
 to pixel coordinates $x_i,y_i$;
-see the \tuto{141}{rectangular detector tutorial}.
+see the \tuto{141}{flat detector tutorial}.
 % TODO: link to Detector Reference
 
 Since the differential scattering cross section \cref{Exsectiondef}
